from:
command: ['sh', '-c',
          'until curl -sS -f "http://${SOLR_SERVICE_HOST}:${SOLR_SERVICE_PORT}/solr/collection1/admin/ping" 2>&1 | grep "status.:.OK";
           do echo waiting for solr; sleep 3; done;']
to:
command: ["/bin/sh", "-c", 'until curl -sS -f "http://${SOLR_SERVICE_HOST}:${SOLR_SERVICE_PORT}/solr/admin/info/system" 2>&1 | grep "status" | grep "0";
           do echo waiting for solr; sleep 3; done;']
added custom entrypoint for solr which starts solr in foreground and creates required collection collection1

added RUN chown -R payara:payara /opt in dataverse dockerfile to give payara permission and ebale logo upload for dataverse collection via ui
changed DOCROOT_DIR from /docroot to /opt/docroot --> allow dataverse to access logos
changed mount path of persistent volume docroot from /docroot to /opt/docroot to mount the correct directory

commands:
kubectl apply -f personas/demo/secrets.yaml
kubectl apply -k personas\prod-skel\envs\env1
run when deployment is done:
kubectl create -f k8s/dataverse/jobs/bootstrap.yaml


kubectl delete -f k8s/dataverse/jobs/bootstrap.yaml
kubectl delete -k personas\prod-skel\envs\env1
kubectl delete -f personas/demo/secrets.yaml

kubectl apply -f prod-skel/bases/minio-standalone/pvc.yaml
kubectl apply -f prod-skel/bases/minio-standalone/svc.yaml
kubectl apply -f prod-skel/bases/minio-standalone/deployment.yaml
kubectl apply -f prod-skel/bases/minio-standalone/job.yaml

kubectl delete -f prod-skel/bases/minio-standalone/job.yaml
kubectl delete -f prod-skel/bases/minio-standalone/deployment.yaml
kubectl delete -f prod-skel/bases/minio-standalone/svc.yaml
kubectl delete -f prod-skel/bases/minio-standalone/pvc.yaml

Docker build commands:
docker build --no-cache -t iqss/dataverse-k8s:5.13 -f docker/dataverse-k8s/payara/Dockerfile .
docker build --no-cache -t iqss/solr-k8s:8.11.1 -f docker/solr-k8s/Dockerfile .

Payara admin console:
kubectl port-forward -n dv-test service/dataverse 4848:4848