@@ -8,7 +8,7 @@ kind: Kustomization
 images:
   - name: iqss/dataverse-k8s
     newTag: "tt"
-#    newTag: "5.13"
+#    newTag: "5.14"
 #    newTag: "4.20-payara"
 
 patchesStrategicMerge:
